--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    font-family: roboto;
+    font-family: 'Roboto';
 }
 
 a {
@@ -18,6 +21,23 @@ ul {
 html {
     background-color: #F7F7EF;
     background-color: #F9F9F9;
+}
+
+.touchScreen{
+    background: #171717;
+    color:  white;
+    position: absolute;   
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+    padding: 20px;
+    white-space:pre-line;
 }
 
 .crcl {
@@ -163,7 +183,6 @@ section.Typing-speed .bg{
 }
 
 
-
 .TypingTestContainer .wordsShow,
 .TypingTestContainer .inputWords textarea {
     background-color: #F6F6F7;
@@ -186,7 +205,7 @@ section.Typing-speed .bg{
     border-top: 1px solid #5a5a5a;
     border-bottom: 1px solid #5a5a5a;
     position: relative;
-
+    white-space: nowrap;
 }
 
 
